force-app/main/default/objects/Product_Issue__c/Product_Issue__c.object-meta.xml
<CustomObject>
    <description>This will be used to track all the products related issues</description>
    <label>Product Inquiry</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>SF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>