force-app/main/default/objects/Product_Issue__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Product Inquiries</relationshipLabel>
    <relationshipName>PO_Products</relationshipName>
    <type>Lookup</type>
</CustomField>