force-app/main/default/objects/Product_Issue__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Availability</fullName>
                <default>true</default>
                <label>Availability</label>
            </value>
            <value>
                <fullName>Availability &amp; Price</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>ACC: Blocked</fullName>
            </value>
            <value>
                <fullName>ACC: Drop-Ship Address Is Incomplete</fullName>
            </value>
            <value>
                <fullName>ACC: Invalid Zip Code</fullName>
            </value>
            <value>
                <fullName>ACC: Missing EDI Partner Profile</fullName>
            </value>
            <value>
                <fullName>ACC: Region/State Not Defined in Country</fullName>
            </value>
            <value>
                <fullName>ACC: Ship-To Cannot Be Used</fullName>
            </value>
            <value>
                <fullName>ACC: Sold-To Not Extended In Sales Area</fullName>
            </value>
            <value>
                <fullName>GIS: Invalid Account</fullName>
            </value>
            <value>
                <fullName>JQ: Being used/Locked in CRM</fullName>
            </value>
            <value>
                <fullName>JQ: Date is Expired/Invalid</fullName>
            </value>
            <value>
                <fullName>JQ: Incomplete Job Quote in CRM</fullName>
            </value>
            <value>
                <fullName>JQ: Item Is Not On Referenced JQ</fullName>
            </value>
            <value>
                <fullName>JQ: Quantity is Higher Than Allowed</fullName>
            </value>
            <value>
                <fullName>JQ: Reference Number is Invalid</fullName>
            </value>
            <value>
                <fullName>JQ: Sold-to Not The Same As On Order</fullName>
            </value>
            <value>
                <fullName>MAT: Deliver Complete, Mixed Fit/Fix</fullName>
            </value>
            <value>
                <fullName>MAT: Discontinued</fullName>
            </value>
            <value>
                <fullName>MAT: Exclusive</fullName>
            </value>
            <value>
                <fullName>MAT: Inactive</fullName>
            </value>
            <value>
                <fullName>MAT: Invalid Product Id</fullName>
            </value>
            <value>
                <fullName>MAT: Missing Accounting Data</fullName>
            </value>
            <value>
                <fullName>MAT: Missing Pricing Procedure</fullName>
            </value>
            <value>
                <fullName>MAT: Not allowed in Cust. Portfolio</fullName>
            </value>
            <value>
                <fullName>MAT: Not Extended In Sales Area</fullName>
            </value>
            <value>
                <fullName>MAT: Not Extended to Plant on Order</fullName>
            </value>
            <value>
                <fullName>MAT: Production Hold</fullName>
            </value>
            <value>
                <fullName>MAT: Sales Blocked with Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>