force-app/main/default/objects/Product_Issue__c/fields/Product_Division__c.field-meta.xml
<CustomField>
    <fullName>Product_Division__c</fullName>
    <formula>Product__r.Division_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Division</label>
    <type>Text</type>
</CustomField>