force-app/main/default/objects/Product_Issue__c/fields/Product_Not_in_SAP__c.field-meta.xml
<CustomField>
    <fullName>Product_Not_in_SAP__c</fullName>
    <label>Product Not in SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>