force-app/main/default/objects/Product_Issue__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <description>This will be to track the promo against the EDI/Manual order cases. For now this is manual but future needs to be associated with actual promo quotes.</description>
    <label>Promo Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>