force-app/main/default/objects/Product_Issue__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is to build relationship between quote and PO product against the EDI / Manual order cases</description>
    <label>Quote Number</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>PO_Products</relationshipName>
    <type>Lookup</type>
</CustomField>