force-app/main/default/objects/Product_Issue__c/fields/SAP_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_ID__c</fullName>
    <formula>Product__r.SAP_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Product ID</label>
    <type>Text</type>
</CustomField>